Modernizer refactorings